# ecospheres-universe

./: .gitignore  .pre-commit-config.yaml  README.md  config-demo.yaml  config-prod.yaml  config.yaml  feed-universe.py  pyproject.toml  requirements.txt  setup.cfg  universe-demo.yaml  universe-prod.yaml
.github/workflows/: tests.yml  update-universes-test.yml  update-universes.yml
configs/: culture-demo.yaml  culture-prod.yaml  ecospheres-demo.yaml  ecospheres-prod.yaml
ecospheres_universe/: __main__.py  check_sync.py  config.py  datagouv.py  feed_universe.py  grist.py  util.py
grist/datagouv-sync/: api.js  index.html
logs/: run_log_demo.txt  run_log_prod.txt
tests/: conftest.py  datagouv_mock.py  datagouv_mocks.py  grist_mock.py  test_datagouv.py  test_end_to_end.py  test_feed_universe.py  util.py
universe/: __main__.py  check_sync.py  config.py  datagouv.py  feed-universe.py  feed_universe.py  grist.py  util.py
